syntax = "proto3";

package tvShow;


message TVShow {
  int32 id = 1;
  string title = 2;
  string description = 3;

}

message GetTVShowRequest {
  int32 tv_show_id = 1;
}

message GetTVShowResponse {
  TVShow tv_show = 1;
}

message SearchTVShowsRequest {
  string query = 1;
}

message SearchTVShowsResponse {
  repeated TVShow tv_shows = 1;
}

message CreateTVShowRequest {
  int32 tv_show_id = 1;
  string title = 2;
  string description = 3;
}

message CreateTVShowResponse {
  TVShow tv_shows = 1;
}

service TVShowService {
  rpc GetTvshow(GetTVShowRequest) returns (GetTVShowResponse);
  rpc SearchTvshows(SearchTVShowsRequest) returns (SearchTVShowsResponse);
  rpc CreateTVShow(CreateTVShowRequest) returns (CreateTVShowResponse);

}